--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="main-container">
             <div class="greeting-wrapper">
             <h1>
-                Hi I'm Ashish Wagle
+                Hi I'm Ashish Wagle.
             </h1>
         </div>
 
@@ -49,7 +49,7 @@
                         <div id="corner-tl" class="corner"></div>
                         <div id="corner-tr" class="corner"></div>
                         <h3>What I Do</h3>
-                        <p>Never gonna give you up, never gonna say goodbye.</p>
+                        <p>I make web applications.</p>
                         <div id="corner-bl" class="corner"></div>
                         <div id="corner-br" class="corner"></div>
                     </div>
@@ -72,8 +72,7 @@
                     </p>
 
                     <p>I am currently trying to learn about front end
-                         web development.I also have knowledge on 3D designing
-                         and animations.
+                         web development.
 
                     </p>
 
@@ -95,8 +94,7 @@
                         </ul>
 
                         <ul>
-                            <li>Java</li>
-                            <li>Calculus</li>
+                            <li>Java</li>                            
                             <li>Blender</li>
                             <li>Ms office</li>
                             <li>LMMS</li>
@@ -109,7 +107,7 @@
                 <h3>Find me on Youtube and Instagram</h3>
                 <a target ="_blank" href="#">Youtube: @Ashish Wagle</a>
                 <br>
-                <a target ="_blank" href="#">Instagram: @a.s.h.i.s.h.w.a.g.l.e</a>
+                <a target ="_blank" href="https://www.instagram.com/a.s.h.i.s.h.w.a.g.l.e/">Instagram: @a.s.h.i.s.h.w.a.g.l.e</a>
             </div>
 
         </div>
