--- a/index.html
+++ b/index.html
@@ -103,9 +103,9 @@
                 </div>
                
                 <div class="social-links">
-                <img id="social_img" src="images/follow.jpg" alt="Ashish's instagram ">
+                <img id="social_img" src="images/shake.svg" alt="Ashish's instagram ">
                 <h3>Find me on Youtube and Instagram</h3>
-                <a target ="_blank" href="#">Youtube: @Ashish Wagle</a>
+                <a target ="_blank" href="https://www.youtube.com/channel/UC5I1ZV96xf-qffbCdFYZihg">Youtube: Ashish Wagle</a>
                 <br>
                 <a target ="_blank" href="https://www.instagram.com/a.s.h.i.s.h.w.a.g.l.e/">Instagram: @a.s.h.i.s.h.w.a.g.l.e</a>
             </div>
