--- a/index.html
+++ b/index.html
@@ -104,10 +104,13 @@
                
                 <div class="social-links">
                 <img id="social_img" src="images/shake.svg" alt="Ashish's instagram ">
-                <h3>Find me on Youtube and Instagram</h3>
+                <h3>Find me on GitHub, Youtube and Instagram</h3>
+                <a target ="_blank" href="https://github.com/ash-ys">GitHub: @ash-ys</a>
+                <br>    
                 <a target ="_blank" href="https://www.youtube.com/channel/UC5I1ZV96xf-qffbCdFYZihg">Youtube: Ashish Wagle</a>
                 <br>
                 <a target ="_blank" href="https://www.instagram.com/a.s.h.i.s.h.w.a.g.l.e/">Instagram: @a.s.h.i.s.h.w.a.g.l.e</a>
+                    
             </div>
 
         </div>
