--- a/index.html
+++ b/index.html
@@ -89,15 +89,16 @@
                             <li>Python</li>
                             <li>Django</li>
                             <li>Javascript</li>
-                            <li>React.Js</li>
+                            <li>React.JS</li>
                             <li>CSS/HTML</li>
                         </ul>
 
                         <ul>
                             <li>Java</li>                            
+                            <li>Three.JS</li>
+                            <li>Node.JS</li>
+                            <li>SQL server</li>
                             <li>Blender</li>
-                            <li>Node.js</li>
-                            <li>LMMS</li>
                         </ul>
                     </div>
                 </div>
