--- a/index.html
+++ b/index.html
@@ -66,12 +66,11 @@
                 <div class="about-me">
                     <h4>More about me</h4>
                     <p>I am Ashish Wagle. I am currently living in
-                        kathmandu and i am studying Bsc.Csit at 
-                        Academia international college in Gwarko,Lalitpur.
+                        kathmandu where I finished Bsc.Csit and I am waiting for the result. I did internship in MERN.
 
                     </p>
 
-                    <p>I am currently trying to learn about front end
+                    <p>I am currently  learning about front end
                          web development.
 
                     </p>
@@ -83,7 +82,7 @@
                 <h4>TOP EXPERTISE</h4>
                 
                     <p>Web developer with primary focus
-                         on django and react: <a target="_blank" href="resume.pdf">Download Resume</a></p>
+                         on MERN : <a target="_blank" href="resume.pdf">Download Resume</a></p>
                     <div id="skills">
                         <ul>
                             <li>Python</li>
@@ -96,8 +95,8 @@
                         <ul>
                             <li>Java</li>                            
                             <li>Three.JS</li>
-                            <li>Node.JS</li>
-                            <li>SQL server</li>
+                            <li>Node</li>
+                            <li>MongoDB</li>
                             <li>Blender</li>
                         </ul>
                     </div>
