--- a/index.html
+++ b/index.html
@@ -66,12 +66,11 @@
                 <div class="about-me">
                     <h4>More about me</h4>
                     <p>I am Ashish Wagle. I am currently living in
-                        kathmandu where I finished Bsc.Csit and I am waiting for the result. I did internship in MERN.
+                        kathmandu where I finished Bsc.Csit and I am waiting for the result.
 
                     </p>
 
-                    <p>I am currently  learning about front end
-                         web development.
+                    <p> I did internship in MERN.
 
                     </p>
 
